--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,7 @@
 
 
   <name>projet-diserens_jordil_sciarra</name>
-  <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <url>https://www.example.com</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
